# ComfyUI-NynxzExperimental

./: .comfyignore  .gitignore  .prettierignore  LICENSE  README.md  THIRD_PARTY_LICENSES.md  __init__.py  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  vite.config.mts
nodes/: TestNode.py  __init__.py  _base.py
nodes/conditioning/: __init__.py  _sigma.py  _variation.py  sigma_gate.py  variation.py
nodes/experimental/: __init__.py  cond_stage.py  layer_bands.py  layer_mix.py  qwen_layers.py
nodes/fusion/: QwenImageEditFusion.py  __init__.py  _composite.py  _fusion.py  _inspect.py  _io_types.py  _library.py  _regions.py  _weightmap.py  api.py  fusion_encode.py  fusion_images.py  fusion_input.py  fusion_inspector.py  fusion_reference.py  fusion_studio.py  regions_preview.py
nodes/lora/: __init__.py  api.py  apply.py  favorites.py  io_types.py  loader.py  loader_clip.py  picker.py  stack.py
nodes/qwen/: __init__.py  _generate.py  _ground.py  generate.py  ground.py
nodes/theme/: __init__.py  api.py
src/: main.ts  shims-vue.d.ts
src/background/: background.ts  register.ts
src/fusion/: FusionGrid.vue  FusionInspector.vue  FusionStage.vue  FusionStrengths.vue  StudioPopover.vue  api.ts  node.ts
src/lib/: defineNode.ts  mountWidget.ts  registerNodes.ts  zenGraph.ts
src/lora/: LoraStack.vue  api.ts  node.ts
src/theme/: api.ts  engine.ts  register.ts
themes/: README.md
themes/aurora/: theme.json
themes/bubblegum/: theme.json
themes/crimson-operator/: theme.json
themes/cute-heart/: theme.json
themes/cytrix/: theme.json
themes/dark/: theme.json
themes/digix/: theme.json
themes/forest/: theme.json
themes/frappe/: theme.json
themes/ghost-circuit/: theme.json
themes/gruvbox/: theme.json
themes/hacker/: theme.json
themes/latte/: theme.json
themes/light/: theme.json
themes/lotus/: theme.json
themes/maroon-volt/: theme.json
themes/mecha/: theme.json
themes/midnight/: theme.json
themes/nynxz/: theme.json
themes/royal-marble/: theme.json
themes/sherbet-signal/: theme.json
themes/tokyo-night/: theme.json
themes/vice/: theme.json
web/: main.js
