[project]
name = "comfyui-nynxz-experimental"
version = "0.1.2"
description = "A collection of experimental custom nodes for ComfyUI made by Nynxz."
authors = [{ name = "Nynxz", email = "contact@nynxz.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = []
dependencies = []

[project.urls]
Repository = "https://github.com/Nynxz/ComfyUI-NynxzExperimental"
BugTracker = "https://github.com/Nynxz/ComfyUI-NynxzExperimental/issues"
Documentation = "https://github.com/Nynxz/ComfyUI-NynxzExperimental/wiki"


[tool.comfy]
PublisherId = "nynxz"
DisplayName = "Nynxz's Experimental Custom Nodes"
Icon = "https://avatars.githubusercontent.com/u/60878743?v=4"
Tags = []
Repository = "https://github.com/Nynxz/ComfyUI-NynxzExperimental"
includes = ["web"]
