[project]
name = "comfyui-nynxz-experimental"
version = "0.1.6"
description = "A collection of experimental custom nodes for ComfyUI made by Nynxz."
authors = [{ name = "Nynxz", email = "contact@nynxz.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = []
dependencies = []

[project.urls]
Repository = "https://github.com/Nynxz/ComfyUI-NynxzExperimental"
BugTracker = "https://github.com/Nynxz/ComfyUI-NynxzExperimental/issues"
Documentation = "https://github.com/Nynxz/ComfyUI-NynxzExperimental/wiki"


[tool.comfy]
PublisherId = "nynxz"
DisplayName = "Nynxz's Experimental Custom Nodes"
Icon = "https://avatars.githubusercontent.com/u/60878743?v=4"
Tags = []
Repository = "https://github.com/Nynxz/ComfyUI-NynxzExperimental"
includes = ["web"]


# Linting / formatting. Run with `uvx ruff check` and `uvx ruff format`
# (uv is already available; no project install needed).
[tool.ruff]
target-version = "py310"
line-length = 100
extend-exclude = ["web", "temp", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "UP",  # pyupgrade (modern syntax)
    "B",   # flake8-bugbear (likely bugs)
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "BLE", # flake8-blind-except (the `# noqa: BLE001` sites opt into this)
    "RUF", # ruff-specific rules
]
# `ruff format` owns code line width; E501 only fires on comments/docstrings/long
# tooltip strings it deliberately leaves alone, so linting it here is just noise.
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true
